Changed from inline-block to float due to Safari alignment bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .gallery-item {
-    display: inline-block; 
+    float: left;
     cursor: pointer;
     position: relative;
     width: 200px;
